<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Default entries -->
    <string name="app_name">RIOT</string>

    <string-array name="menu_array">
        <item>Home</item>
        <item>RIOT-Account</item>
        <item>Language</item>
        <item>Location</item>
        <item>UserList</item>
        <item>ThingsList</item>
        <item>DevicesList</item>
    </string-array>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="settings">Settings</string>

    <!-- Fragment main (all entries for main please insert here) -->
    <string name="filter_appointment">Appointments</string>
    <string name="filter_error">Errors</string>
    <string name="filter_warning">Warnings</string>

    <!-- Fragment language (all entries for language please insert here) -->
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="flag_uk">Flag United Kingdom</string>
    <string name="flag_de">Flag Germany</string>
    <string name="lang_header">Please select your preferred language</string>
    <string name="desc_uk">Sets the language to English-UK.</string>
    <string name="desc_ger">Sets the language to German.</string>

    <!-- Fragment account (all entries for account please insert here) -->
    <string name="add_account">Add Account</string>
    <string name="add_event">Add Event</string>
    <string name="acc_username">Username:</string>
    <string name="acc_password">Password:</string>
    <string name="user_role">User-Role:</string>
    <string name="user_permission">User-Permissions:</string>
    <string name="user_edit">Edit User</string>

    <!-- Fragment filter (all entries for language please insert here) -->
    <string name="desc_filter_error">Show only Error messages if selected</string>
    <string name="desc_filter_appointment">Show only Appointments if selected</string>
    <string name="desc_filter_warning">Show only Warning messages if selected</string>

    <!-- Fragment location (all entries for language please insert here) -->
    <string name="location_show">Show available Location</string>
    <string name="location_hide">Hide available Location</string>
    <string name="location_current_position">Current position</string>
    <string name="location_latitude">Latitude</string>
    <string name="location_longitude">Longitude</string>
    <string name="location_distance">Distance from current position to</string>
    <string name="location_store_distance">Notify within a range of</string>
    <string name="change_color">Change Color</string>

    <!-- Notification (all entries for language please insert here) -->
    <string-array name="priority">
        <item>max</item>
        <item>high</item>
        <item>default</item>
        <item>low</item>
        <item>min</item>
    </string-array>
    <string name="notification_messages_with">\u00A0Messages with\u00A0</string>
    <string name="notification_priority">\u00A0priority</string>
    <string name="user_save">Save</string>
    <string name="user_abort">Abort</string>
    <string name="processDialogExecute">Getting Data …</string>
    <string name="user_list">User List</string>
    <string name="device_list">Device List</string>
    <string name="thing_list">Thing List</string>
    <string name="user_detail">User Detail</string>
    <string name="user_back">Back</string>
    <string name="user_id">Id</string>
    <string name="user_image">Image</string>
    <string name="user_online_state">Online-State</string>
    <string name="device_name">Device Name</string>
    <string name="device_detail">Device Detail</string>
    <string name="thing_id">Id</string>
    <string name="thing_name">Thing Name</string>
    <string name="device_id">Id</string>
    <string name="thing_detail">Thing Detail</string>
</resources>