<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/filter_error_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_error" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_filter_error"
        android:textColor="@android:color/holo_red_light" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="#000000" />

    <CheckBox
        android:id="@+id/filter_appointment_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_appointment" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_filter_appointment" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="#000000" />

    <CheckBox
        android:id="@+id/filter_warning_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_warning" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_filter_warning"
        android:textColor="@android:color/holo_orange_dark" />

</LinearLayout>