<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/fragment_main_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            android:id="@+id/user_id_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_id_edit"
            android:layout_marginBottom="@dimen/fragment_margin_between_elements"
            android:editable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_username"
            android:id="@+id/user_name_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_name_edit"
            android:layout_marginBottom="@dimen/fragment_margin_between_elements"
            android:editable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_role"
            android:id="@+id/user_role_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_role_edit"
            android:layout_marginBottom="@dimen/fragment_margin_between_elements"
            android:editable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_permission"
            android:id="@+id/user_permission_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_permission_edit"
            android:layout_marginBottom="@dimen/fragment_margin_between_elements"
            android:editable="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/user_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="118dp"
                android:text="@string/user_back" />

            <Button
                android:id="@+id/user_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="118dp"
                android:text="@string/user_edit" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>