<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/fragment_main_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            android:id="@+id/userIdText" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userIdEdit"
            android:layout_marginBottom="@dimen/fragment_margin_between_elements" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_username"
            android:id="@+id/userNameText" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userNameEdit"
            android:layout_marginBottom="@dimen/fragment_margin_between_elements" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_online_state"
            android:id="@+id/userOnlineStateText" />

        <ImageView
            android:id="@+id/userOnlineState"
            android:layout_width="@dimen/list_item_online_status_size"
            android:layout_height="@dimen/list_item_online_status_size"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_image"
            android:id="@+id/userImageText" />

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="@dimen/list_item_image_size"
            android:layout_height="@dimen/list_item_image_size"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_role"
            android:id="@+id/userRoleText" />

        <de.uni_stuttgart.riot.android.management.MultiSelectionSpinner
            android:id="@+id/user_role_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fragment_margin_between_elements" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_permission"
            android:id="@+id/userPermissionText" />

        <de.uni_stuttgart.riot.android.management.MultiSelectionSpinner
            android:id="@+id/userPermissionSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fragment_margin_between_elements" />

        <include layout="@layout/fragment_edit_buttons" />

    </LinearLayout>
</ScrollView>