<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/fragment_main_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thing_id"
            android:id="@+id/thing_id_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/thing_id_edit"
            android:layout_marginBottom="@dimen/fragment_margin_between_elements" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thing_name"
            android:id="@+id/thing_name_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/thing_name_edit"
            android:layout_marginBottom="@dimen/fragment_margin_between_elements" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/detail_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="118dp"
                android:text="@string/user_save"
                android:layout_marginBottom="@dimen/fragment_margin_between_elements" />

            <Button
                android:id="@+id/detail_abort_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="118dp"
                android:text="@string/user_abort"
                android:layout_marginBottom="@dimen/fragment_margin_between_elements" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>